# FirstRustHybird

./: Cargo.toml  cargo-toml.txt  main.js  main.rs  railway.txt  vercel.json
src/: wasm_handler.rs
static/: index.html
