[package]
name = "pharmacy-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
wasm-bindgen = "0.2"
firebase-rs = "2.0"

[lib]
name = "wasm_handler"
path = "src/wasm_handler.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pharmacy-dashboard"
path = "src/main.rs"
